# blockchains-plus

./: .gitignore  Cargo.toml  LICENSE  README.md
contracts/: Cargo.toml
contracts/src/: lib.rs
explorer/: README.md  package.json
explorer/pages/: index.js
node/: Cargo.toml
node/src/: block.rs  main.rs
