[package]
name = "blockchains-plus-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = "0.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ed25519-dalek = "2"
rand = "0.8"
wasmtime = "17"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"